*SVN*

* Base#instantiate_time_object only uses Time.zone when Base.time_zone_aware_attributes is true; leverages Time#time_with_datetime_fallback for readability [Geoff Buesing]

* Refactor ConnectionAdapters::Column.new_time: leverage DateTime failover behavior of Time#time_with_datetime_fallback [Geoff Buesing]

* Improve associations performance by using symbol callbacks instead of string callbacks. #11108 [adymo]

* Optimise the BigDecimal conversion code.  #11110 [adymo]

* Introduce the :readonly option to all associations. Records from the association cannot be saved.  #11084 [miloops]

* Multiparameter attributes for time columns fail over to DateTime when out of range of Time [Geoff Buesing]

* Base#instantiate_time_object uses Time.zone.local() [Geoff Buesing]

* Add timezone-aware attribute readers and writers. #10982 [Geoff Buesing]

* Instantiating time objects in multiparameter attributes uses Time.zone if available.  #10982 [rick]

* Add note about how ActiveRecord::Observer classes are initialized in a Rails app. #10980 [fxn]

* MySQL: omit text/blob defaults from the schema instead of using an empty string.  #10963 [mdeiters]

* belongs_to supports :dependent => :destroy and :delete.  #10592 [Jonathan Viney]

* Introduce preload query strategy for eager :includes.  #9640 [Frederick Cheung, Aleksey Kondratenko, codafoo]

* Support aggregations in finder conditions.  #10572 [Ryan Kinderman]

* Organize and clean up the Active Record test suite.  #10742 [John Barnette]

* Ensure that modifying has_and_belongs_to_many actions clear the query cache.  Closes #10840 [john.andrews]

* Fix issue where Table#references doesn't pass a :null option to a *_type attribute for polymorphic associations.  Closes #10753 [railsjitsu]

* Fixtures: removed support for the ancient pre-YAML file format.  #10736 [John Barnette]

* More thoroughly quote table names.  #10698 [dimdenis, lotswholetime, Jeremy Kemper]
