@@ -2,3 +2,8 @@ michael_welcome:
   id: 1
   post_id: 1
   person_id: 1
+
+michael_authorless:
+  id: 2
+  post_id: 3
+  person_id: 1
